i18n: add 2 more strings

--- a/src/qz/common/resources/messages_zh_CN.properties
+++ b/src/qz/common/resources/messages_zh_CN.properties
@@ -83,3 +83,5 @@ claim\ a\ USB\ device=占用 USB 设备
 check\ USB\ claim\ status=检查 USB 占用情况
 release\ a\ USB\ device=释放 USB 设备
 listen\ for\ USB\ devices=监听 USB 设备
+Library\ Name\:=函数库名称：
+Version\:=版本：
