get rid of whitespace changes

--- a/src/qz/common/resources/messages_de.properties
+++ b/src/qz/common/resources/messages_de.properties
@@ -1,5 +1,5 @@
 #updated Translations
-#Fri Apr 06 15:11:51 CEST 2018
+#Mon Apr 09 18:45:45 CEST 2018
 release\ a\ USB\ device=USB Gerät freigeben
 %s\ Pixel\ Print=%s Pixel Ausdruck
 Please\ Confirm=Bitte bestätigen
@@ -27,6 +27,7 @@ Shows\ all\ connect/disconnect\ messages,\ useful\ for\ debugging\ purposes=Alle
 Valid\ To=Gültig bis
 Block=Block
 Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Zugriff auf lokale Ressourcen für "%s" permanent blockieren?
+Version\:=Version\:
 access\ local\ resources=Zugriff auf lokale Ressourcen
 close\ a\ serial\ port=Seriellen Port schließen
 Block\ Anonymous\ Requests=Anonymen Zugriff blockieren
@@ -38,10 +39,12 @@ Remember\ this\ decision=Diese Einstellungen merken
 listen\ for\ USB\ devices=Warte auf USB Geräte
 View\ Logs...=Logs anzeigen...
 Permanently\ blocked\ "%s"\ from\ accessing\ local\ resources=Zugriff auf lokale Ressourcen wurde für "%s" blockiert
+Library\ Name\:=Bibliothek Name\:
 Exit=Beenden
 %s\ HTML\ Print=%s HTML Ausdruck
 Value=Wert
 connect\ to\ QZ=Verbindung zu QZ aufbauen
+connect\ to\ %s=Verbindung zu %s aufbauen
 Save=Speichern
 Software\:=Software\:
 Advanced=Erweiterte Optionen
@@ -71,19 +74,19 @@ print\ to\ %s=drucken über %s
 OK=OK
 Reload=Neu laden
 Secure\ Socket\:=Sichere Verbindung\:
-Show\ all\ notifications=Alle Benachrichtigungen anzeigen
 %s\ Raw\ Print=%s Raw Ausdruck
+Show\ all\ notifications=Alle Benachrichtigungen anzeigen
 expired=ausgelaufen
 Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Zugriff auf lokale Ressourcen für "%s" erlauben
-Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Datei konnte nicht gespeichert werden (Fehlende Berechtigungen)
 Action\ Required=Aktion notwendig
+Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Datei konnte nicht gespeichert werden (Fehlende Berechtigungen)
 Valid\ From=Gültig von
 Successfully\ removed\ %s\ entry=Eintrag %s wurde erfolgreich gelöscht
-check\ USB\ claim\ status=USB Verbindungsstatus überprüfen
 Exit\ %s?=Beenden %s?
+check\ USB\ claim\ status=USB Verbindungsstatus überprüfen
 Delete=Löschen
-access\ USB\ devices=Zugriff auf USB Geräte
 Error\ removing\ %s\ entry=Eintrag %s konnte nicht entfernt werden
-Certificate\ information=Information über das Zertifikat
+access\ USB\ devices=Zugriff auf USB Geräte
 Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Die Aktion "Neu laden" wurde noch nicht implementiert.
+Certificate\ information=Information über das Zertifikat
 Fallback\ Socket\:=Ausweichverbindung\:
