--- a/src/qz/common/resources/messages_en.properties
+++ b/src/qz/common/resources/messages_en.properties
@@ -1,5 +1,5 @@
 #updated Translations
-#Sat Apr 07 09:06:37 CEST 2018
+#Mon Apr 09 18:45:45 CEST 2018
 release\ a\ USB\ device=release a USB device
 %s\ Pixel\ Print=%s Pixel Print
 Please\ Confirm=Please Confirm
@@ -27,6 +27,7 @@ Shows\ all\ connect/disconnect\ messages,\ useful\ for\ debugging\ purposes=Show
 Valid\ To=Valid To
 Block=Block
 Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Permanently block "%s" from accessing local resources?
+Version\:=Version\:
 access\ local\ resources=access local resources
 close\ a\ serial\ port=close a serial port
 Block\ Anonymous\ Requests=Block Anonymous Requests
@@ -38,10 +39,12 @@ Remember\ this\ decision=Remember this decision
 listen\ for\ USB\ devices=listen for USB devices
 View\ Logs...=View Logs...
 Permanently\ blocked\ "%s"\ from\ accessing\ local\ resources=Permanently blocked "%s" from accessing local resources
+Library\ Name\:=Library Name\:
 Exit=Exit
 %s\ HTML\ Print=%s HTML Print
-connect\ to\ QZ=connect to QZ
 Value=Value
+connect\ to\ QZ=connect to QZ
+connect\ to\ %s=connect to %s
 Save=Save
 Software\:=Software\:
 Advanced=Advanced
@@ -71,19 +74,19 @@ print\ to\ %s=print to %s
 OK=OK
 Reload=Reload
 Secure\ Socket\:=Secure Socket\:
-%s\ Raw\ Print=%s Raw Print
 Show\ all\ notifications=Show all notifications
+%s\ Raw\ Print=%s Raw Print
 expired=expired
 Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Permanently allowed "%s" to access local resources
-Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Failed to write to file (Insufficient user privileges)
 Action\ Required=Action Required
+Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Failed to write to file (Insufficient user privileges)
 Valid\ From=Valid From
 Successfully\ removed\ %s\ entry=Successfully removed %s entry
-check\ USB\ claim\ status=check USB claim status
 Exit\ %s?=Exit %s?
+check\ USB\ claim\ status=check USB claim status
 Delete=Delete
-access\ USB\ devices=access USB devices
 Error\ removing\ %s\ entry=Error removing %s entry
-Certificate\ information=Certificate information
+access\ USB\ devices=access USB devices
 Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Sorry, Reload has not yet been implemented.
+Certificate\ information=Certificate information
 Fallback\ Socket\:=Fallback Socket\:
