locale selection as menu

--- a/src/qz/common/resources/messages_de.properties
+++ b/src/qz/common/resources/messages_de.properties
@@ -51,7 +51,7 @@ Advanced=Erweiterte Optionen
 %%s\ wants\ to\ %s=%%s möchte %s
 Blocked=Blockiert
 Close=Schließen
-Change\ Language...=Sprache ändern...
+Change\ Language=Sprache ändern
 Open\ file\ location=Öffne Datei
 Allow=Gestatten
 Invalid\ server=Ungültiger Server
