--- a/src/qz/common/resources/messages_zh_CN.properties
+++ b/src/qz/common/resources/messages_zh_CN.properties
@@ -50,7 +50,7 @@ Software\:=软件：
 Advanced=高级
 %%s\ wants\ to\ %s=%%s 想要 %s
 Blocked=已阻止
-Change\ Language...=Change Language...
+Change\ Language=Change Language
 Close=关闭
 Open\ file\ location=打开文件位置
 Allow=允许
