--- a/src/qz/common/resources/messages_zh_TW.properties
+++ b/src/qz/common/resources/messages_zh_TW.properties
@@ -51,7 +51,7 @@ Advanced=Advanced
 %%s\ wants\ to\ %s=%%s wants to %s
 Blocked=Blocked
 Close=Close
-Change\ Language...=Change Language...
+Change\ Language=Change Language
 Open\ file\ location=Open file location
 Allow=Allow
 Invalid\ server=Invalid server
