--- a/src/qz/common/resources/messages_de.properties
+++ b/src/qz/common/resources/messages_de.properties
@@ -1,92 +1,98 @@
 #updated Translations
-#Mon Apr 09 18:45:45 CEST 2018
-release\ a\ USB\ device=USB Gerät freigeben
-%s\ Pixel\ Print=%s Pixel Ausdruck
-Please\ Confirm=Bitte bestätigen
-About...=Über...
-Certificate=Zertifikat
-expires\ soon=läuft bald aus
-Remove\ %s\ from\ %s?=Entferne %s von %s?
-Cancel=Abbrechen
-%s\ PDF\ Print=%s PDF Ausdruck
-open\ a\ serial\ port=Seriellen Port öffnen
-Sites\ permanently\ blocked\ from\ access=Permanent blockierte Seiten
-Publisher\:=Publisher\:
-Allowed=Gestattet
-Automatically\ start=Autostart aktivieren
-use\ a\ USB\ device=USB Gerät verwenden
-access\ serial\ ports=Zugriff auf Seriellen Port
-Trusted=Vertrauenswürdig
-None=Keine
-access\ connected\ printers=Zugriff auf verbundene Drucker
-Sites\ permanently\ allowed\ access=Permanent freigegebene Seiten
-claim\ a\ USB\ device=Verbindung zu USB Gerät aufbauen
+#Fri Jul 12 16:34:36 EDT 2019
+Delete=Löschen
+Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Datei konnte nicht gespeichert werden (Fehlende Berechtigungen)
+Exit\ %s?=Beenden %s?
+Reload=Neu laden
+listen\ for\ filesystem\ events=listen for filesystem events
 None.\ \ No\ https\ support.=Keine. Keine https Unterstützung.
+Action\ Required=Aktion notwendig
+connect\ to\ QZ=Verbindung zu QZ aufbauen
+Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Zugriff auf lokale Ressourcen für "%s" permanent blockieren?
+Library\ Name\:=Bibliothek Name\:
+Close=Schließen
+Blocked=Blockiert
+Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Die Aktion "Neu laden" wurde noch nicht implementiert.
+access\ connected\ printers=Zugriff auf verbundene Drucker
+Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=Alle Zugriffe ohne validem Zertifikat/Signatur werden blockiert
+Error\ stopping\ print\ socket\:\ %s=Druckverbindung konnte nicht geschlossen werden\: %s
+Software\:=Software\:
+Trusted=Vertrauenswürdig
+Change\ Language=Sprache ändern
+Verified\ by\ %s=Verifiziert von %s
+Valid\ To=Gültig bis
+Remove\ %s\ from\ %s?=Entferne %s von %s?
 Common\ Name=Gemeingültiger Name
 Shows\ all\ connect/disconnect\ messages,\ useful\ for\ debugging\ purposes=Alle Verbindungsnachrichten, welche nützliche Debug Informationen beinhalten, anzeigen.
-Valid\ To=Gültig bis
-Block=Block
-Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Zugriff auf lokale Ressourcen für "%s" permanent blockieren?
-Version\:=Version\:
-access\ local\ resources=Zugriff auf lokale Ressourcen
-close\ a\ serial\ port=Seriellen Port schließen
-Block\ Anonymous\ Requests=Anonymen Zugriff blockieren
-Field=Feld
-Error\ stopping\ print\ socket\:\ %s=Druckverbindung konnte nicht geschlossen werden\: %s
-Organization=Organisation
-Create\ Desktop\ shortcut=Desktopverknüpfung erstellen
-Remember\ this\ decision=Diese Einstellungen merken
-listen\ for\ USB\ devices=Warte auf USB Geräte
-View\ Logs...=Logs anzeigen...
 Permanently\ blocked\ "%s"\ from\ accessing\ local\ resources=Zugriff auf lokale Ressourcen wurde für "%s" blockiert
-Library\ Name\:=Bibliothek Name\:
-Exit=Beenden
-%s\ HTML\ Print=%s HTML Ausdruck
-Value=Wert
-connect\ to\ QZ=Verbindung zu QZ aufbauen
-connect\ to\ %s=Verbindung zu %s aufbauen
-Save=Speichern
-Software\:=Software\:
-Advanced=Erweiterte Optionen
-%%s\ wants\ to\ %s=%%s möchte %s
-Blocked=Blockiert
-Close=Schließen
-Change\ Language=Sprache ändern
-Open\ file\ location=Öffne Datei
-Allow=Gestatten
-Invalid\ server=Ungültiger Server
-Site\ Manager...=Site Manager...
-Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=Pfad zu jar Datei unbekannt\: %s Eintrag nicht gültig.
-Fingerprint=Fingerabdruck
-Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=Alle Zugriffe ohne validem Zertifikat/Signatur werden blockiert
-Invalid\ certificate=Ungültiges Zertifikat
-Successfully\ added\ %s\ entry=Eintrag %s erfolgreich hinzugefügt
-Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=Datei Browser konnte nicht geöffnet werden\: %s
-Clear=Löschen
-Are\ you\ sure?=Sind sie sich sicher?
-Server\ started\ on\ port(s)\ %s=Server wurde auf Port(s) %s gestartet
-Untrusted\ website=Nicht vertrauenswürdige Webseiten
+listen\ for\ USB\ devices=Warte auf USB Geräte
 Error\ creating\ %s\ entry=Fehler bei der Erstellung des Eintrags %s
-Open\ Log\ Location=Öffne Log Verzeichnis
-Verified\ by\ %s=Verifiziert von %s
-send\ data\ over\ a\ serial\ port=Sende Daten über Seriellen Port
 print\ to\ %s=drucken über %s
-OK=OK
-Reload=Neu laden
-Secure\ Socket\:=Sichere Verbindung\:
+Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=Datei Browser konnte nicht geöffnet werden\: %s
+Publisher\:=Publisher\:
+Site\ Manager...=Site Manager...
+Create\ Desktop\ shortcut=Desktopverknüpfung erstellen
+Certificate=Zertifikat
+Successfully\ added\ %s\ entry=Eintrag %s erfolgreich hinzugefügt
+Field=Feld
 %s\ Raw\ Print=%s Raw Ausdruck
-Show\ all\ notifications=Alle Benachrichtigungen anzeigen
 expired=ausgelaufen
-Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Zugriff auf lokale Ressourcen für "%s" erlauben
-Action\ Required=Aktion notwendig
-Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Datei konnte nicht gespeichert werden (Fehlende Berechtigungen)
-Valid\ From=Gültig von
-Successfully\ removed\ %s\ entry=Eintrag %s wurde erfolgreich gelöscht
-Exit\ %s?=Beenden %s?
 check\ USB\ claim\ status=USB Verbindungsstatus überprüfen
-Delete=Löschen
-Error\ removing\ %s\ entry=Eintrag %s konnte nicht entfernt werden
-access\ USB\ devices=Zugriff auf USB Geräte
-Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Die Aktion "Neu laden" wurde noch nicht implementiert.
+connect\ to\ %s=Verbindung zu %s aufbauen
+Please\ Confirm=Bitte bestätigen
+%%s\ wants\ to\ %s=%%s möchte %s
+Allow=Gestatten
+Untrusted\ website=Nicht vertrauenswürdige Webseiten
+claim\ a\ USB\ device=Verbindung zu USB Gerät aufbauen
+%s\ PDF\ Print=%s PDF Ausdruck
+Version\:=Version\:
+listen\ for\ printer\ status=listen for printer status
+close\ a\ serial\ port=Seriellen Port schließen
+access\ local\ resources=Zugriff auf lokale Ressourcen
+Secure\ Socket\:=Sichere Verbindung\:
+Valid\ From=Gültig von
+Exit=Beenden
+delete\ a\ file=delete a file
 Certificate\ information=Information über das Zertifikat
+access\ serial\ ports=Zugriff auf Seriellen Port
+Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=Pfad zu jar Datei unbekannt\: %s Eintrag nicht gültig.
+access\ USB\ devices=Zugriff auf USB Geräte
+Organization=Organisation
+Advanced=Erweiterte Optionen
+Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Zugriff auf lokale Ressourcen für "%s" erlauben
+Show\ all\ notifications=Alle Benachrichtigungen anzeigen
+Cancel=Abbrechen
+Invalid\ server=Ungültiger Server
+write\ to\ a\ file=write to a file
+read\ the\ content\ of\ a\ file=read the content of a file
+release\ a\ USB\ device=USB Gerät freigeben
+Successfully\ removed\ %s\ entry=Eintrag %s wurde erfolgreich gelöscht
+expires\ soon=läuft bald aus
+Allowed=Gestattet
+Automatically\ start=Autostart aktivieren
+None=Keine
+Sites\ permanently\ allowed\ access=Permanent freigegebene Seiten
+use\ a\ USB\ device=USB Gerät verwenden
+Error\ removing\ %s\ entry=Eintrag %s konnte nicht entfernt werden
 Fallback\ Socket\:=Ausweichverbindung\:
+open\ a\ serial\ port=Seriellen Port öffnen
+Fingerprint=Fingerabdruck
+Value=Wert
+Block=Block
+Save=Speichern
+About...=Über...
+Are\ you\ sure?=Sind sie sich sicher?
+Sites\ permanently\ blocked\ from\ access=Permanent blockierte Seiten
+Clear=Löschen
+Server\ started\ on\ port(s)\ %s=Server wurde auf Port(s) %s gestartet
+%s\ Pixel\ Print=%s Pixel Ausdruck
+OK=OK
+view\ the\ filesystem=view the filesystem
+Remember\ this\ decision=Diese Einstellungen merken
+Open\ Log\ Location=Öffne Log Verzeichnis
+Open\ file\ location=Öffne Datei
+View\ Logs...=Logs anzeigen...
+Invalid\ certificate=Ungültiges Zertifikat
+%s\ HTML\ Print=%s HTML Ausdruck
+send\ data\ over\ a\ serial\ port=Sende Daten über Seriellen Port
+Block\ Anonymous\ Requests=Anonymen Zugriff blockieren
