--- a/src/qz/common/resources/messages_zh_CN.properties
+++ b/src/qz/common/resources/messages_zh_CN.properties
@@ -1,92 +1,98 @@
 #updated Translations
-#Mon Apr 09 18:45:45 CEST 2018
-release\ a\ USB\ device=释放 USB 设备
-%s\ Pixel\ Print=%s 像素打印
-Please\ Confirm=请确认
-About...=关于...
-Certificate=证书
-expires\ soon=即将过期
-Remove\ %s\ from\ %s?=将 %s 从 %s 删除？
-Cancel=取消
-%s\ PDF\ Print=%s PDF 打印
-open\ a\ serial\ port=打开串口
-Sites\ permanently\ blocked\ from\ access=已永久阻止的网站
-Publisher\:=发布者：
-Allowed=已允许
-Automatically\ start=开机自启
-use\ a\ USB\ device=使用 USB 设备
-access\ serial\ ports=访问串口
-Trusted=信任状态
-None=无
-access\ connected\ printers=访问已连接的打印机
-Sites\ permanently\ allowed\ access=已永久允许的网站
-claim\ a\ USB\ device=占用 USB 设备
+#Fri Jul 12 16:34:36 EDT 2019
+Delete=删除
+Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=无法写入文件（用户权限不足）
+Exit\ %s?=退出 %s？
+Reload=重新加载
+listen\ for\ filesystem\ events=listen for filesystem events
 None.\ \ No\ https\ support.=无。没有 https 支持。
+Action\ Required=需要确认
+connect\ to\ QZ=连接到 QZ
+Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=要永久阻止 "%s" 访问本地资源吗？
+Library\ Name\:=函数库名称：
+Close=关闭
+Blocked=已阻止
+Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=抱歉，重新加载尚未实现。
+access\ connected\ printers=访问已连接的打印机
+Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=拦截所有不含有效证书或签名的请求
+Error\ stopping\ print\ socket\:\ %s=无法停止打印套接字：%s
+Software\:=软件：
+Trusted=信任状态
+Change\ Language=Change Language
+Verified\ by\ %s=由 %s 验证
+Valid\ To=截止日期
+Remove\ %s\ from\ %s?=将 %s 从 %s 删除？
 Common\ Name=公用名
 Shows\ all\ connect/disconnect\ messages,\ useful\ for\ debugging\ purposes=显示所有连接/断开连接信息，启用此选项对调试有很大帮助
-Valid\ To=截止日期
-Block=阻止
-Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=要永久阻止 "%s" 访问本地资源吗？
-Version\:=版本：
-access\ local\ resources=访问本地资源
-close\ a\ serial\ port=关闭串口
-Block\ Anonymous\ Requests=拦截匿名请求
-Field=项目
-Error\ stopping\ print\ socket\:\ %s=无法停止打印套接字：%s
-Organization=组织
-Create\ Desktop\ shortcut=创建桌面快捷方式
-Remember\ this\ decision=记住我的选择
-listen\ for\ USB\ devices=监听 USB 设备
-View\ Logs...=查看日志...
 Permanently\ blocked\ "%s"\ from\ accessing\ local\ resources=已永久阻止 "%s" 访问本地资源
-Library\ Name\:=函数库名称：
-Exit=退出
-%s\ HTML\ Print=%s HTML 打印
-connect\ to\ QZ=连接到 QZ
-Value=值
-connect\ to\ %s=connect to %s
-Save=Save
-Software\:=软件：
-Advanced=高级
-%%s\ wants\ to\ %s=%%s 想要 %s
-Blocked=已阻止
-Change\ Language=Change Language
-Close=关闭
-Open\ file\ location=打开文件位置
-Allow=允许
-Invalid\ server=无效的服务器
-Site\ Manager...=站点管理器...
-Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=无法推测 jar 路径：%s 项目无法继续。
-Fingerprint=指纹
-Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=拦截所有不含有效证书或签名的请求
-Invalid\ certificate=无效的证书
-Successfully\ added\ %s\ entry=成功添加 %s 项目
-Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=抱歉，无法打开文件浏览器：%s
-Clear=清除
-Are\ you\ sure?=你确定吗？
-Server\ started\ on\ port(s)\ %s=服务器运行在端口 %s
-Untrusted\ website=不受信任的网站
+listen\ for\ USB\ devices=监听 USB 设备
 Error\ creating\ %s\ entry=无法创建 %s 项目
-Open\ Log\ Location=打开日志位置
-Verified\ by\ %s=由 %s 验证
-send\ data\ over\ a\ serial\ port=通过串口发送数据
 print\ to\ %s=打印到 %s
-OK=确定
-Reload=重新加载
-Secure\ Socket\:=安全套接字：
+Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=抱歉，无法打开文件浏览器：%s
+Publisher\:=发布者：
+Site\ Manager...=站点管理器...
+Create\ Desktop\ shortcut=创建桌面快捷方式
+Certificate=证书
+Successfully\ added\ %s\ entry=成功添加 %s 项目
+Field=项目
 %s\ Raw\ Print=%s 原始数据打印
-Show\ all\ notifications=显示所有通知
 expired=已过期
-Permanently\ allowed\ "%s"\ to\ access\ local\ resources=已永久允许 "%s" 访问本地资源
-Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=无法写入文件（用户权限不足）
-Action\ Required=需要确认
-Valid\ From=颁发日期
-Successfully\ removed\ %s\ entry=成功删除 %s 项目
 check\ USB\ claim\ status=检查 USB 占用情况
-Exit\ %s?=退出 %s？
-Delete=删除
-access\ USB\ devices=访问 USB 设备
-Error\ removing\ %s\ entry=无法删除 %s 项目
+connect\ to\ %s=connect to %s
+Please\ Confirm=请确认
+%%s\ wants\ to\ %s=%%s 想要 %s
+Allow=允许
+Untrusted\ website=不受信任的网站
+claim\ a\ USB\ device=占用 USB 设备
+%s\ PDF\ Print=%s PDF 打印
+Version\:=版本：
+listen\ for\ printer\ status=listen for printer status
+close\ a\ serial\ port=关闭串口
+access\ local\ resources=访问本地资源
+Secure\ Socket\:=安全套接字：
+Valid\ From=颁发日期
+Exit=退出
+delete\ a\ file=delete a file
 Certificate\ information=证书信息
-Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=抱歉，重新加载尚未实现。
+access\ serial\ ports=访问串口
+Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=无法推测 jar 路径：%s 项目无法继续。
+access\ USB\ devices=访问 USB 设备
+Organization=组织
+Advanced=高级
+Permanently\ allowed\ "%s"\ to\ access\ local\ resources=已永久允许 "%s" 访问本地资源
+Show\ all\ notifications=显示所有通知
+Cancel=取消
+Invalid\ server=无效的服务器
+write\ to\ a\ file=write to a file
+read\ the\ content\ of\ a\ file=read the content of a file
+release\ a\ USB\ device=释放 USB 设备
+Successfully\ removed\ %s\ entry=成功删除 %s 项目
+expires\ soon=即将过期
+Allowed=已允许
+Automatically\ start=开机自启
+None=无
+Sites\ permanently\ allowed\ access=已永久允许的网站
+use\ a\ USB\ device=使用 USB 设备
+Error\ removing\ %s\ entry=无法删除 %s 项目
 Fallback\ Socket\:=备选套接字：
+open\ a\ serial\ port=打开串口
+Fingerprint=指纹
+Value=值
+Block=阻止
+Save=Save
+About...=关于...
+Are\ you\ sure?=你确定吗？
+Sites\ permanently\ blocked\ from\ access=已永久阻止的网站
+Clear=清除
+Server\ started\ on\ port(s)\ %s=服务器运行在端口 %s
+%s\ Pixel\ Print=%s 像素打印
+OK=确定
+view\ the\ filesystem=view the filesystem
+Remember\ this\ decision=记住我的选择
+Open\ Log\ Location=打开日志位置
+Open\ file\ location=打开文件位置
+View\ Logs...=查看日志...
+Invalid\ certificate=无效的证书
+%s\ HTML\ Print=%s HTML 打印
+send\ data\ over\ a\ serial\ port=通过串口发送数据
+Block\ Anonymous\ Requests=拦截匿名请求
