--- a/src/qz/common/resources/messages_en.properties
+++ b/src/qz/common/resources/messages_en.properties
@@ -1,92 +1,98 @@
 #updated Translations
-#Mon Apr 09 18:45:45 CEST 2018
-release\ a\ USB\ device=release a USB device
-%s\ Pixel\ Print=%s Pixel Print
-Please\ Confirm=Please Confirm
-About...=About...
-Certificate=Certificate
-expires\ soon=expires soon
-Remove\ %s\ from\ %s?=Remove %s from %s?
-Cancel=Cancel
-%s\ PDF\ Print=%s PDF Print
-open\ a\ serial\ port=open a serial port
-Sites\ permanently\ blocked\ from\ access=Sites permanently blocked from access
-Publisher\:=Publisher\:
-Allowed=Allowed
-Automatically\ start=Automatically start
-use\ a\ USB\ device=use a USB device
-access\ serial\ ports=access serial ports
-Trusted=Trusted
-None=None
-access\ connected\ printers=access connected printers
-Sites\ permanently\ allowed\ access=Sites permanently allowed access
-claim\ a\ USB\ device=claim a USB device
+#Fri Jul 12 16:34:36 EDT 2019
+Delete=Delete
+Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Failed to write to file (Insufficient user privileges)
+Exit\ %s?=Exit %s?
+Reload=Reload
+listen\ for\ filesystem\ events=listen for filesystem events
 None.\ \ No\ https\ support.=None.  No https support.
+Action\ Required=Action Required
+connect\ to\ QZ=connect to QZ
+Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Permanently block "%s" from accessing local resources?
+Library\ Name\:=Library Name\:
+Close=Close
+Blocked=Blocked
+Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Sorry, Reload has not yet been implemented.
+access\ connected\ printers=access connected printers
+Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=Blocks all requests that do no contain a valid certificate/signature
+Error\ stopping\ print\ socket\:\ %s=Error stopping print socket\: %s
+Software\:=Software\:
+Trusted=Trusted
+Change\ Language=Change Language
+Verified\ by\ %s=Verified by %s
+Valid\ To=Valid To
+Remove\ %s\ from\ %s?=Remove %s from %s?
 Common\ Name=Common Name
 Shows\ all\ connect/disconnect\ messages,\ useful\ for\ debugging\ purposes=Shows all connect/disconnect messages, useful for debugging purposes
-Valid\ To=Valid To
-Block=Block
-Permanently\ block\ "%s"\ from\ accessing\ local\ resources?=Permanently block "%s" from accessing local resources?
-Version\:=Version\:
-access\ local\ resources=access local resources
-close\ a\ serial\ port=close a serial port
-Block\ Anonymous\ Requests=Block Anonymous Requests
-Field=Field
-Error\ stopping\ print\ socket\:\ %s=Error stopping print socket\: %s
-Organization=Organization
-Create\ Desktop\ shortcut=Create Desktop shortcut
-Remember\ this\ decision=Remember this decision
-listen\ for\ USB\ devices=listen for USB devices
-View\ Logs...=View Logs...
 Permanently\ blocked\ "%s"\ from\ accessing\ local\ resources=Permanently blocked "%s" from accessing local resources
-Library\ Name\:=Library Name\:
-Exit=Exit
-%s\ HTML\ Print=%s HTML Print
-Value=Value
-connect\ to\ QZ=connect to QZ
-connect\ to\ %s=connect to %s
-Save=Save
-Software\:=Software\:
-Advanced=Advanced
-%%s\ wants\ to\ %s=%%s wants to %s
-Blocked=Blocked
-Close=Close
-Change\ Language=Change Language
-Open\ file\ location=Open file location
-Allow=Allow
-Invalid\ server=Invalid server
-Site\ Manager...=Site Manager...
-Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=Unable to determine jar path\: %s entry cannot succeed.
-Fingerprint=Fingerprint
-Blocks\ all\ requests\ that\ do\ no\ contain\ a\ valid\ certificate/signature=Blocks all requests that do no contain a valid certificate/signature
-Invalid\ certificate=Invalid certificate
-Successfully\ added\ %s\ entry=Successfully added %s entry
-Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=Sorry, unable to open the file browser\: %s
-Clear=Clear
-Are\ you\ sure?=Are you sure?
-Server\ started\ on\ port(s)\ %s=Server started on port(s) %s
-Untrusted\ website=Untrusted website
+listen\ for\ USB\ devices=listen for USB devices
 Error\ creating\ %s\ entry=Error creating %s entry
-Open\ Log\ Location=Open Log Location
-Verified\ by\ %s=Verified by %s
-send\ data\ over\ a\ serial\ port=send data over a serial port
 print\ to\ %s=print to %s
-OK=OK
-Reload=Reload
-Secure\ Socket\:=Secure Socket\:
-Show\ all\ notifications=Show all notifications
+Sorry,\ unable\ to\ open\ the\ file\ browser\:\ %s=Sorry, unable to open the file browser\: %s
+Publisher\:=Publisher\:
+Site\ Manager...=Site Manager...
+Create\ Desktop\ shortcut=Create Desktop shortcut
+Certificate=Certificate
+Successfully\ added\ %s\ entry=Successfully added %s entry
+Field=Field
 %s\ Raw\ Print=%s Raw Print
 expired=expired
-Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Permanently allowed "%s" to access local resources
-Action\ Required=Action Required
-Failed\ to\ write\ to\ file\ (Insufficient\ user\ privileges)=Failed to write to file (Insufficient user privileges)
-Valid\ From=Valid From
-Successfully\ removed\ %s\ entry=Successfully removed %s entry
-Exit\ %s?=Exit %s?
 check\ USB\ claim\ status=check USB claim status
-Delete=Delete
-Error\ removing\ %s\ entry=Error removing %s entry
-access\ USB\ devices=access USB devices
-Sorry,\ Reload\ has\ not\ yet\ been\ implemented.=Sorry, Reload has not yet been implemented.
+connect\ to\ %s=connect to %s
+Please\ Confirm=Please Confirm
+%%s\ wants\ to\ %s=%%s wants to %s
+Allow=Allow
+Untrusted\ website=Untrusted website
+claim\ a\ USB\ device=claim a USB device
+%s\ PDF\ Print=%s PDF Print
+Version\:=Version\:
+listen\ for\ printer\ status=listen for printer status
+close\ a\ serial\ port=close a serial port
+access\ local\ resources=access local resources
+Secure\ Socket\:=Secure Socket\:
+Valid\ From=Valid From
+Exit=Exit
+delete\ a\ file=delete a file
 Certificate\ information=Certificate information
+access\ serial\ ports=access serial ports
+Unable\ to\ determine\ jar\ path\:\ %s\ entry\ cannot\ succeed.=Unable to determine jar path\: %s entry cannot succeed.
+access\ USB\ devices=access USB devices
+Organization=Organization
+Advanced=Advanced
+Permanently\ allowed\ "%s"\ to\ access\ local\ resources=Permanently allowed "%s" to access local resources
+Show\ all\ notifications=Show all notifications
+Cancel=Cancel
+Invalid\ server=Invalid server
+write\ to\ a\ file=write to a file
+read\ the\ content\ of\ a\ file=read the content of a file
+release\ a\ USB\ device=release a USB device
+Successfully\ removed\ %s\ entry=Successfully removed %s entry
+expires\ soon=expires soon
+Allowed=Allowed
+Automatically\ start=Automatically start
+None=None
+Sites\ permanently\ allowed\ access=Sites permanently allowed access
+use\ a\ USB\ device=use a USB device
+Error\ removing\ %s\ entry=Error removing %s entry
 Fallback\ Socket\:=Fallback Socket\:
+open\ a\ serial\ port=open a serial port
+Fingerprint=Fingerprint
+Value=Value
+Block=Block
+Save=Save
+About...=About...
+Are\ you\ sure?=Are you sure?
+Sites\ permanently\ blocked\ from\ access=Sites permanently blocked from access
+Clear=Clear
+Server\ started\ on\ port(s)\ %s=Server started on port(s) %s
+%s\ Pixel\ Print=%s Pixel Print
+OK=OK
+view\ the\ filesystem=view the filesystem
+Remember\ this\ decision=Remember this decision
+Open\ Log\ Location=Open Log Location
+Open\ file\ location=Open file location
+View\ Logs...=View Logs...
+Invalid\ certificate=Invalid certificate
+%s\ HTML\ Print=%s HTML Print
+send\ data\ over\ a\ serial\ port=send data over a serial port
+Block\ Anonymous\ Requests=Block Anonymous Requests
